# MyCPU

./: Readme.md
CPU/: Makefile  Readme.md  tangnano9k.cst
CPU/Scripts/: Build.sh  ClearIntermediate.sh  InstallRequirements.sh  LoadToFPGA.sh
CPU/Src/: alu.v  alu.vh  clock.v  controller.v  cpu.v  isa.vh  isaImpl.vh  memory.v  memory.vh  register.v  register.vh
Tools/: CMakeLists.txt
Tools/ASM/: Assembler.cpp  Assembler.h  CMakeLists.txt  CharType.cpp  CharType.h  ISA.cpp  ISA.h  Main.cpp  Token.cpp  Token.h  TokenHelperLibrary.cpp  TokenHelperLibrary.h
Tools/Tests/: CMakeLists.txt
Tools/Tests/ASM/: test1.asm
